# hydration-helper

./: .gitignore  CMakeLists.txt  LICENSE  app_manifest.json  launch.vs.json
src/: light-ctrl.c  light-ctrl.h  log.h  main.c  pomodoro.c  pomodoro.h
src/dev/: i2c-if.c  i2c-if.h  led.h  rdb-leds.c  rdb-leds.h  sparkfun-qwiic-scale.c  sparkfun-qwiic-scale.h  sparkfun-qwiic-twist.c  sparkfun-qwiic-twist.h
